--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@heroui/button": "2.2.27",
+    "@heroui/card": "^2.2.25",
     "@heroui/code": "2.2.21",
     "@heroui/dropdown": "2.3.27",
+    "@heroui/image": "^2.2.17",
     "@heroui/input": "2.4.28",
     "@heroui/kbd": "2.2.22",
     "@heroui/link": "2.2.23",
+    "@heroui/modal": "^2.2.24",
     "@heroui/navbar": "2.2.25",
+    "@heroui/select": "^2.4.28",
     "@heroui/snippet": "2.2.28",
     "@heroui/switch": "2.2.24",
     "@heroui/system": "2.4.23",
+    "@heroui/tabs": "^2.2.24",
     "@heroui/theme": "2.4.23",
     "@heroui/use-theme": "2.1.10",
     "@react-aria/visually-hidden": "3.8.28",
