--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/badge": "^2.2.17",
     "@heroui/button": "2.2.27",
+    "@heroui/card": "^2.2.25",
     "@heroui/code": "2.2.21",
+    "@heroui/divider": "^2.2.20",
     "@heroui/dropdown": "2.3.27",
     "@heroui/input": "2.4.28",
     "@heroui/kbd": "2.2.22",
     "@heroui/link": "2.2.23",
+    "@heroui/modal": "^2.2.24",
     "@heroui/navbar": "2.2.25",
+    "@heroui/select": "^2.4.28",
     "@heroui/snippet": "2.2.28",
+    "@heroui/spinner": "^2.2.24",
     "@heroui/switch": "2.2.24",
     "@heroui/system": "2.4.23",
+    "@heroui/table": "^2.2.27",
     "@heroui/theme": "2.4.23",
+    "@heroui/tooltip": "^2.2.24",
     "@heroui/use-theme": "2.1.10",
     "@react-aria/visually-hidden": "3.8.28",
     "@react-types/shared": "3.32.1",
@@ -28,6 +36,7 @@
     "@tailwindcss/vite": "4.1.11",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
+    "ky": "^1.14.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
